Add util function to parse commandline args
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -22,8 +22,9 @@ find_package(CURL REQUIRED)
 
 # Lib
 set(SOURCES
-  src/email_sender.cpp
   src/email_receiver.cpp
+  src/email_sender.cpp
+  src/utils.cpp
 )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
