Split curl_context.hpp into .hpp and .cpp
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(CURL REQUIRED)
 
 # Lib
 set(SOURCES
+  src/curl_context.cpp
   src/email_receiver.cpp
   src/email_sender.cpp
   src/utils.cpp
