Extract abstract CurlExecutor class
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(CURL REQUIRED)
 # Lib
 set(SOURCES
   src/curl_context.cpp
+  src/curl_executor.cpp
   src/email_receiver.cpp
   src/email_sender.cpp
   src/utils.cpp
