--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SOURCES
   src/curl_executor.cpp
   src/email_receiver.cpp
   src/email_sender.cpp
+  src/payload_utils.cpp
   src/utils.cpp
 )
 
@@ -88,6 +89,12 @@ if(BUILD_TESTING)
   #set(ament_cmake_cppcheck_ADDITIONAL_INCLUDE_DIRS ${CURL_INCLUDE_DIRS})
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
+
+  find_package(ament_cmake_gtest REQUIRED)
+  ament_add_gtest(test_utils
+    test/test_utils.cpp
+  )
+  target_link_libraries(test_utils ${PROJECT_NAME})
 endif()
 
 ament_package()
