--- a/email/package.xml
+++ b/email/package.xml
@@ -16,9 +16,10 @@
   <!-- <build_export_depend>rcpputils</build_export_depend> -->
   <!-- <build_export_depend>rcutils</build_export_depend> -->
 
-  <!-- Only used if libcurl isn't found on the system -->
+  <!-- Only actually used if libcurl isn't found on the system -->
   <depend>libcurl_vendor</depend>
 
+  <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
