Add Options class
It is used and owned by the Context. It owns any and all
options/parameters.

Also, the parsing logic is now in the options header.

Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -33,6 +33,8 @@ set(SOURCES
   src/curl_executor.cpp
   src/email_receiver.cpp
   src/email_sender.cpp
+  src/init.cpp
+  src/options.cpp
   src/payload_utils.cpp
   src/publisher.cpp
   src/response_utils.cpp
