Allow passing options via a .yml file with the path through an env var
This way the call to email::init needs no parameters. This makes it a
bit simpler and also makes integrating with other thing easier.

The path to the options file should be set in the `EMAIL_OPTIONS_FILE`
env var, and is relative tom the current working directory.

Additionally, users can set `EMAIL_DEBUG` (to anything) to enable debug
outputs.

Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -14,6 +14,7 @@ elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
 endif()
 
 find_package(ament_cmake_ros REQUIRED)
+find_package(rcpputils REQUIRED)
 
 set(CURL_USE_VENDOR FALSE)
 find_package(CURL)
@@ -48,6 +49,7 @@ if(CURL_USE_VENDOR)
 else()
   target_link_libraries(${PROJECT_NAME} ${CURL_LIBRARIES})
 endif()
+ament_target_dependencies(${PROJECT_NAME} rcpputils)
 target_include_directories(${PROJECT_NAME} PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
   "$<INSTALL_INTERFACE:include>"
