--- a/email/package.xml
+++ b/email/package.xml
@@ -18,6 +18,7 @@
 
   <!-- Only actually used if libcurl isn't found on the system -->
   <depend>libcurl_vendor</depend>
+  <depend>rcpputils</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
