Add abstract PubSubObject class and validate topic name
The abstract PubSubObject class takes care of the common pub/sub stuff.
In this case, it owns the topic name and validates it.

Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SOURCES
   src/email/sender.cpp
   src/init.cpp
   src/options.cpp
+  src/pub_sub.cpp
   src/publisher.cpp
   src/subscriber.cpp
   src/utils.cpp
