--- a/email/package.xml
+++ b/email/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>email</name>
   <version>0.0.1</version>
-  <description>Library for sending and reading emails.</description>
+  <description>Pub/sub using emails.</description>
   <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
   <license>Apache License 2.0</license>
   <author>Christophe Bedard</author>
