Add ServiceClient & ServiceServer
Initial implementation; improvements to follow.

The ServiceClient has a Publisher and a Subscriber. It sends its request
using its Publisher, and gets the response using its Subscriber.

The ServiceServer has a Publisher and a special requests queue. Its
Publisher is used to send back its response as an email reply. It
registers its requests queue with the SubscriberManager (to be
refactored) in order to keep the whole EmailData struct, not just the
email body.

Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -40,6 +40,9 @@ set(SOURCES
   src/options.cpp
   src/pub_sub.cpp
   src/publisher.cpp
+  src/service.cpp
+  src/service_client.cpp
+  src/service_server.cpp
   src/subscriber.cpp
   src/subscriber_manager.cpp
   src/utils.cpp
@@ -103,6 +106,26 @@ target_link_libraries(sub
 )
 install(TARGETS
   sub
+  DESTINATION lib/${PROJECT_NAME}
+)
+add_executable(service_client
+  example/service_client.cpp
+)
+target_link_libraries(service_client
+  ${PROJECT_NAME}
+)
+install(TARGETS
+  service_client
+  DESTINATION lib/${PROJECT_NAME}
+)
+add_executable(service_server
+  example/service_server.cpp
+)
+target_link_libraries(service_server
+  ${PROJECT_NAME}
+)
+install(TARGETS
+  service_server
   DESTINATION lib/${PROJECT_NAME}
 )
 
