Split SubscriberManager into PollingManager and Handler classes
PollingManager does the polling using the EmailReceiver. It has a vector
for handlers to register with it. When it gets new emails, it calls
every handler with the new email.

SubscriptionHandler and ServiceHandler both register with the
PollingManager. Subscribers/service servers register with the right
handler, which pushes the new message or new email data to their queues
if there is a match.

Overall, this splits up the polling and handling logic so that the
polling logic doesn't need to contain handling logic, like giving the
new message to subscribers depending on the topic/email subject.

Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCES
   src/curl/context.cpp
   src/curl/executor.cpp
   src/email/payload_utils.cpp
+  src/email/polling_manager.cpp
   src/email/receiver.cpp
   src/email/response_utils.cpp
   src/email/sender.cpp
@@ -42,9 +43,10 @@ set(SOURCES
   src/publisher.cpp
   src/service.cpp
   src/service_client.cpp
+  src/service_handler.cpp
   src/service_server.cpp
   src/subscriber.cpp
-  src/subscriber_manager.cpp
+  src/subscription_handler.cpp
   src/utils.cpp
 )
 
