--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -154,6 +154,10 @@ if(BUILD_TESTING)
     test/test_pub_sub.cpp
   )
   target_link_libraries(test_pub_sub ${PROJECT_NAME})
+  ament_add_gtest(test_service
+    test/test_service.cpp
+  )
+  target_link_libraries(test_service ${PROJECT_NAME})
 endif()
 
 ament_package()
