--- a/email/package.xml
+++ b/email/package.xml
@@ -10,9 +10,15 @@
 
   <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
+  <build_depend>spdlog_vendor</build_depend>
+  <build_depend>spdlog</build_depend>
+
   <!-- Only actually used if libcurl isn't found on the system -->
   <depend>libcurl_vendor</depend>
   <depend>rcpputils</depend>
+
+  <exec_depend>spdlog_vendor</exec_depend>
+  <exec_depend>spdlog</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
