Properly ignore example & test directories for codecov
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,5 @@
 fixes:
   - "ros_ws/src/*/rmw_email/email/::"
 ignore:
-  - "**/email/example"
-  - "**/email/test"
+  - "email/example"
+  - "email/test"
