Use version_assertion_command input from tag-version-commit
Fixes #72

Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -11,3 +11,4 @@ jobs:
     - uses: christophebedard/tag-version-commit@v1
       with:
         token: ${{ secrets.TAG_CREATION_TOKEN }}
+        version_assertion_command: 'grep -q "<version>$version</version>" email/package.xml'
