--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
       - master
 jobs:
   test:
+    name: "Build and test"
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
