Make codecov informational only
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,11 @@
+coverage:
+  status:
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        target: 0%
 fixes:
   - "ros_ws/src/*/rmw_email/email/::"
 ignore:
