--- a/rmw_email_cpp/package.xml
+++ b/rmw_email_cpp/package.xml
@@ -19,9 +19,11 @@
   <depend>rosidl_typesupport_introspection_c</depend>
   <depend>rosidl_typesupport_introspection_cpp</depend>
 
-  <!-- <test_depend>ament_cmake_gtest</test_depend> -->
+  <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>std_msgs</test_depend>
+  <test_depend>builtin_interfaces</test_depend>
 
   <member_of_group>rmw_implementation_packages</member_of_group>
 
