--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,11 @@ jobs:
         required-ros-distributions: ${{ matrix.build-type == 'binary' && 'rolling' || '' }}
     - uses: ros-tooling/action-ros-ci@master
       with:
-        package-name: email email_examples
+        package-name: email email_examples rmw_email_cpp
         target-ros2-distro: rolling
-        vcs-repo-file-url: ${{ matrix.build-type == 'source' && 'https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos' || '' }}
+        vcs-repo-file-url: |
+          ${{ matrix.build-type == 'source' && 'https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos' || '' }}
+          ${{ github.workspace }}/dependencies.repos
         import-token: ${{ secrets.REPO_TOKEN }}
         colcon-defaults: |
           {
