--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
             build-type: binary
           - os: ubuntu-latest
             build-type: source
-          - os: macos-latest
-            build-type: source
+          # - os: macos-latest
+          #   build-type: source
     steps:
     - uses: actions/checkout@v2
     - uses: ros-tooling/setup-ros@master
