Switch to using YAML for config files
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/package.xml
+++ b/email/package.xml
@@ -17,6 +17,7 @@
   <depend>libcurl_vendor</depend>
   <depend>rcpputils</depend>
   <depend>rcutils</depend>
+  <depend>yaml_cpp_vendor</depend>
 
   <exec_depend>spdlog_vendor</exec_depend>
   <exec_depend>spdlog</exec_depend>
