--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(rcpputils REQUIRED)
 find_package(rcutils REQUIRED)
 find_package(spdlog_vendor REQUIRED)
 find_package(spdlog REQUIRED)
+find_package(yaml_cpp_vendor REQUIRED)
 
 set(CURL_USE_VENDOR TRUE)
 # TODO(christophebedard) switch to using system curl when possible,
@@ -61,7 +62,12 @@ if(CURL_USE_VENDOR)
 else()
   target_link_libraries(${PROJECT_NAME} ${CURL_LIBRARIES})
 endif()
-ament_target_dependencies(${PROJECT_NAME} rcpputils rcutils spdlog)
+ament_target_dependencies(${PROJECT_NAME}
+  rcpputils
+  rcutils
+  spdlog
+  yaml_cpp_vendor
+)
 if(WIN32)
   # Causes the visibility macros to use dllexport rather than dllimport
   # which is appropriate when building the dll but not consuming it.
@@ -73,7 +79,14 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   "$<INSTALL_INTERFACE:include>"
 )
 ament_export_include_directories(include)
-ament_export_dependencies(ament_cmake_ros rcpputils rcutils spdlog_vendor spdlog)
+ament_export_dependencies(
+  ament_cmake_ros
+  rcpputils
+  rcutils
+  spdlog_vendor
+  spdlog
+  yaml_cpp_vendor
+)
 ament_export_targets(${PROJECT_NAME} HAS_LIBRARY_TARGET)
 ament_export_libraries(${PROJECT_NAME})
 if(CURL_USE_VENDOR)
