Move GID generation & ownership from rmw_email_cpp to email pubs/subs
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -42,6 +42,7 @@ set(SOURCES
   src/email/receiver.cpp
   src/email/response_utils.cpp
   src/email/sender.cpp
+  src/gid.cpp
   src/init.cpp
   src/log.cpp
   src/options.cpp
