--- a/email_examples/CMakeLists.txt
+++ b/email_examples/CMakeLists.txt
@@ -22,6 +22,7 @@ add_example(send)
 add_example(receive)
 add_example(pub)
 add_example(sub)
+add_example(sub_wait)
 add_example(sub_wait_set)
 add_example(service_client)
 add_example(service_server)
