--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
         package-name: email email_examples rmw_email_cpp
         target-ros2-distro: rolling
         vcs-repo-file-url: |
-          ${{ matrix.build-type == 'source' && 'https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos' || '' }}
           ${{ github.workspace }}/dependencies.repos
+        # ${{ matrix.build-type == 'source' && 'https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos' || '' }}
         import-token: ${{ secrets.REPO_TOKEN }}
         colcon-defaults: |
           {
