--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -118,6 +118,10 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 
   find_package(ament_cmake_gtest REQUIRED)
+  ament_add_gtest(test_gid
+    test/test_gid.cpp
+  )
+  target_link_libraries(test_gid ${PROJECT_NAME})
   ament_add_gtest(test_log
     test/test_log.cpp
   )
