Add tests to improve coverage
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -128,6 +128,10 @@ if(BUILD_TESTING)
     test/test_log.cpp
   )
   target_link_libraries(test_log ${PROJECT_NAME})
+  ament_add_gtest(test_message_info
+    test/test_message_info.cpp
+  )
+  target_link_libraries(test_message_info ${PROJECT_NAME})
   ament_add_gtest(test_utils
     test/test_utils.cpp
     ENV EMAIL_TEST_UTILS_TEST_ENV_VAR=value42 EMAIL_TEST_UTILS_FILE=${CMAKE_CURRENT_SOURCE_DIR}/test/test_utils.cpp
