Add sub_wait_message_info example
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email_examples/CMakeLists.txt
+++ b/email_examples/CMakeLists.txt
@@ -23,6 +23,7 @@ add_example(receive)
 add_example(pub)
 add_example(sub)
 add_example(sub_wait)
+add_example(sub_wait_message_info)
 add_example(sub_wait_set)
 add_example(service_client)
 add_example(service_server)
