Add wait_* utility methods for service clients and servers with examples
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email_examples/CMakeLists.txt
+++ b/email_examples/CMakeLists.txt
@@ -26,7 +26,9 @@ add_example(sub_wait)
 add_example(sub_wait_message_info)
 add_example(sub_wait_set)
 add_example(service_client)
+add_example(service_client_wait)
 add_example(service_server)
+add_example(service_server_wait)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
