--- a/email_examples/CMakeLists.txt
+++ b/email_examples/CMakeLists.txt
@@ -27,6 +27,7 @@ add_example(sub_wait_message_info)
 add_example(sub_wait_set)
 add_example(service_client)
 add_example(service_client_wait)
+add_example(service_client_wait_service_info)
 add_example(service_server)
 add_example(service_server_wait)
 add_example(service_server_wait_service_info)
