--- a/rmw_email_cpp/package.xml
+++ b/rmw_email_cpp/package.xml
@@ -16,6 +16,7 @@
   <depend>rcpputils</depend>
   <depend>rmw</depend>
   <depend>rosidl_runtime_c</depend>
+  <depend>rosidl_runtime_cpp</depend>
   <depend>rosidl_typesupport_introspection_c</depend>
   <depend>rosidl_typesupport_introspection_cpp</depend>
 
