Extract abstract NamedObject class
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -49,6 +49,7 @@ set(SOURCES
   src/init.cpp
   src/log.cpp
   src/message_info.cpp
+  src/named_object.cpp
   src/options.cpp
   src/pub_sub.cpp
   src/publisher.cpp
