Disable binary job for now
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            build-type: binary
+          # - os: ubuntu-latest
+          #   build-type: binary
           - os: ubuntu-latest
             build-type: source
           # - os: macos-latest
