Go back to using ros2.repos file (#233)
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            build-type: binary
+          # - os: ubuntu-latest
+          #   build-type: binary
           - os: ubuntu-latest
             build-type: source
           # - os: macos-latest
@@ -28,7 +28,7 @@ jobs:
         target-ros2-distro: rolling
         vcs-repo-file-url: |
           ${{ github.workspace }}/dependencies.repos
-        # ${{ matrix.build-type == 'source' && 'https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos' || '' }}
+          ${{ matrix.build-type == 'source' && 'https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos' || '' }}
         import-token: ${{ secrets.REPO_TOKEN }}
         colcon-defaults: |
           {
