--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -8,14 +8,15 @@ jobs:
     name: "Generate and push"
     runs-on: ubuntu-latest
     steps:
-    - name: Install doxygen
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y doxygen
     - name: Set up Python 3
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y doxygen pandoc plantuml
+        pip3 install pandoc-plantuml-filter
     - name: Get gen_docs
       uses: actions/checkout@v2
       with:
@@ -38,13 +39,19 @@ jobs:
         ref: master
         fetch-depth: 0
         path: repos/master/
-    - name: Gen docs
+    - name: Gen API docs
       run: |
         python3 gen_docs/gen_docs.py --config gh-pages/gen_docs.yml --skip-clone
+    - name: Gen design docs
+      run: |
+        mkdir -p pandoc/email/ && cd pandoc/email/
+        pandoc ../../repos/master/email/doc/design.md --filter pandoc-plantuml > index.html
     - name: Copy docs to gh-pages
       run: |
         rm -rf gh-pages/api/
         mv -T output/master/ gh-pages/api/
+        rm -rf gh-pages/design/
+        mv -T pandoc/ gh-pages/design/
     - name: Commit and push to gh-pages branch
       run: |
         cd gh-pages
