Remove link to rendered version of design doc when rendering design doc
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -45,6 +45,7 @@ jobs:
     - name: Gen design docs
       run: |
         mkdir -p pandoc/email/ && cd pandoc/email/
+        sed -i '/christophebedard.com/d' ../../repos/master/email/doc/design.md
         pandoc ../../repos/master/email/doc/design.md --filter pandoc-plantuml > index.html
     - name: Copy docs to gh-pages
       run: |
