--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -149,6 +149,14 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 
   find_package(ament_cmake_gtest REQUIRED)
+  ament_add_gtest(test_communication_info
+    test/test_communication_info.cpp
+  )
+  target_link_libraries(test_communication_info ${PROJECT_NAME})
+  ament_add_gtest(test_containers
+    test/test_containers.cpp
+  )
+  target_link_libraries(test_containers ${PROJECT_NAME})
   ament_add_gtest(test_gid
     test/test_gid.cpp
   )
@@ -161,10 +169,6 @@ if(BUILD_TESTING)
     test/test_options.cpp
   )
   target_link_libraries(test_options ${PROJECT_NAME})
-  ament_add_gtest(test_communication_info
-    test/test_communication_info.cpp
-  )
-  target_link_libraries(test_communication_info ${PROJECT_NAME})
   ament_add_gtest(test_utils
     test/test_utils.cpp
     ENV EMAIL_TEST_UTILS_TEST_ENV_VAR=value42 EMAIL_TEST_UTILS_FILE=${CMAKE_CURRENT_SOURCE_DIR}/test/test_utils.cpp
