Create abstract EmailReceiver and extract CurlEmailReceiver
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -53,6 +53,7 @@ set(SOURCES
   src/context.cpp
   src/curl/context.cpp
   src/curl/executor.cpp
+  src/email/curl_receiver.cpp
   src/email/curl_sender.cpp
   src/email/handler.cpp
   src/email/payload_utils.cpp
