Extract topic & service name validation functions in rmw_email_cpp
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/rmw_email_cpp/CMakeLists.txt
+++ b/rmw_email_cpp/CMakeLists.txt
@@ -39,6 +39,7 @@ set(${PROJECT_NAME}_SOURCES
   src/qos.cpp
   src/take.cpp
   src/timestamp.cpp
+  src/topic_service_name.cpp
   src/type_support.cpp
 
   src/rmw_client.cpp
