--- a/email/CMakeLists.txt
+++ b/email/CMakeLists.txt
@@ -32,7 +32,7 @@ message(STATUS "Found CURL version: ${CURL_VERSION_STRING}")
 message(STATUS "Using CURL include dir(s): ${CURL_INCLUDE_DIRS}")
 message(STATUS "Using CURL lib(s): ${CURL_LIBRARIES}")
 
-option(EMAIL_ENABLE_TRACING "Enable building with static tracepoints using LTTng" OFF)
+option(EMAIL_ENABLE_TRACING "Enable building with static tracepoints using LTTng" ON)
 if(EMAIL_ENABLE_TRACING)
   find_package(PkgConfig)
   if(PkgConfig_FOUND)
@@ -41,7 +41,7 @@ if(EMAIL_ENABLE_TRACING)
       message(STATUS "Building with LTTng instrumentation support")
       set(EMAIL_HAS_LTTNG_TRACING "1")
     else()
-      message(FATAL_ERROR "EMAIL_ENABLE_TRACING requires lttng-ust")
+      message("Not building with LTTng since lttng-ust was not found")
     endif()
   endif()
 endif()
