Update branch to rolling
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/gen_docs.yml
+++ b/gen_docs.yml
@@ -1,4 +1,4 @@
 docs:
   repo: https://x-access-token:ghs_SyJhPOiNxV7fjV8N86NTuVgRiL6tl44IMHja@github.com/christophebedard/rmw_email.git
   versions:
-    master:
+    rolling:
